--- a/gold-admin-frontend/src/app/views/pages/admin/global-map/global-map.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/global-map/global-map.component.scss
@@ -3,4 +3,14 @@
         height:60vh; 
         padding-bottom: 30px;
     }
+    .pos {
+        position   : absolute;
+        top: 65px;
+        left: 50%;
+        transform: translate(-50%, 0);
+        font-weight: 500;
+        font-size  : 14px;
+        z-index: 100 !important; 
+        letter-spacing: 1.1px;
+    }
 }
