--- a/gold-admin-frontend/src/app/views/partials/components/location/location.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/location/location.component.html
@@ -2,6 +2,15 @@
 
     <div class="mat-table__wrapper custom-2" [ngStyle]="{'overflow-x':'hidden'}">
         <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource">
+            <ng-container matColumnDef="appraiserName">
+                <mat-header-cell *matHeaderCellDef>Appraiser Name</mat-header-cell>
+                <mat-cell *matCellDef="let role">
+                    <span *ngIf="role.distance">
+                        {{role?.user?.firstName}}
+                        {{role?.user?.lastName}}
+                    </span>
+                </mat-cell>
+            </ng-container>
             <ng-container matColumnDef="time">
                 <mat-header-cell *matHeaderCellDef>Time</mat-header-cell>
                 <mat-cell *matCellDef="let role">{{role.trackingTime | time24to12}}</mat-cell>
@@ -10,16 +19,16 @@
             <ng-container matColumnDef="location">
                 <mat-header-cell *matHeaderCellDef>Location</mat-header-cell>
                 <mat-cell *matCellDef="let role">
-                    <span *ngIf="role.location">
-                        {{role.location.location | titlecase}}
-                    </span>
+                    
+                        {{role?.address | titlecase}}
+                 
                 </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="distance">
                 <mat-header-cell *matHeaderCellDef>Distance (kms)</mat-header-cell>
-                <mat-cell *matCellDef="let role">
-                    <span *ngIf="role.distance">
+                <mat-cell *matCellDef="let role ">
+                    <span *ngIf="role.distance;else noDataFound">
                         {{role.distance}}
                     </span>
                 </mat-cell>
@@ -27,7 +36,7 @@
             <ng-container matColumnDef="battery">
                 <mat-header-cell *matHeaderCellDef>Battery</mat-header-cell>
                 <mat-cell *matCellDef="let role">
-                    <span *ngIf="role.battery">
+                    <span *ngIf="role.battery; else noDataFound">
                         {{role.battery}} %
                     </span>
                 </mat-cell>
@@ -36,16 +45,15 @@
             <ng-container matColumnDef="coordinates">
                 <mat-header-cell *matHeaderCellDef>Latititude & Longitude</mat-header-cell>
                 <mat-cell *matCellDef="let role">
-                    <span *ngIf="role.battery">
-                        {{role.battery}} %
-                    </span>
+                        {{role.latitude}} <br>
+                        {{role.longitude}}
                 </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="network">
-                <mat-header-cell *matHeaderCellDef>network</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef>Network</mat-header-cell>
                 <mat-cell *matCellDef="let role">
-                    <span *ngIf="role.network">
+                    <span *ngIf="role.network; else noDataFound">
                         {{role.network | titlecase}}
                     </span>
                 </mat-cell>
@@ -54,7 +62,7 @@
             <ng-container matColumnDef="totalDistance">
                 <mat-header-cell *matHeaderCellDef>Total Distance</mat-header-cell>
                 <mat-cell *matCellDef="let role">
-                    <span *ngIf="role.totalDistance">
+                    <span *ngIf="role.totalDistance;else noDataFound">
                         {{role.totalDistance}}
                     </span>
                 </mat-cell>
@@ -80,3 +88,7 @@
             [showFirstLastButtons]="true"></mat-paginator>
     </div>
 </div>
+
+<ng-template #noDataFound>
+    <b class="text-center w-25">-</b>
+</ng-template>
