--- a/gold-admin-frontend/src/app/views/pages/admin/global-map/global-map.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/global-map/global-map.component.html
@@ -98,7 +98,7 @@
                 </div>
             </mat-tab>
             <mat-tab label="Location">
-                <kt-location [from]="'globalMap'" [masterLoanId]="masterLoanId" [date]="date.value">
+                <kt-location [from]="'globalMap'"  [date]="date.value">
                 </kt-location>
             </mat-tab>
         </mat-tab-group>
