--- a/gold-admin-frontend/src/app/views/pages/broker/orders/view-pay/view-pay.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/orders/view-pay/view-pay.component.html
@@ -127,8 +127,8 @@
                         <div class="col-8">
                             <select formControlName="paymentMode" class="form-control"
                                 [class.isError]="paymentForm.controls.paymentMode.touched && paymentForm.controls.paymentMode.invalid">
-                                <option value="">Select Payment Type</option>
-                            <!-- </select>
+                                <!-- <option value="">Select Payment Type</option>
+                            </select>
                             <select formControlName="paymentMode" class="form-control"
                                 [class.isError]="paymentForm.controls.paymentMode.touched && paymentForm.controls.paymentMode.invalid"> -->
                                 <option value="">Select Payment Type</option>
