change done in customer details

--- a/gold-admin-frontend/src/app/views/partials/components/customer-details/customer-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/customer-details/customer-details.component.html
@@ -78,8 +78,8 @@
                    
                     <div class="text-color font-weight-500 kt-margin-b-5"
                     [ngStyle]="{'width':'65%','line-height':'1.5'}">
-                    {{cutomerDetails?.customerScrap[0]?.scrapBankDetails?.acHolderName | titlecase}}
-                    {{cutomerDetails?.customerScrap[0]?.scrapBankDetails?.bankBranch | titlecase}}
+                    {{cutomerDetails?.customerScrap[0]?.scrapBankDetails?.bankName | titlecase}}<br>
+                    {{cutomerDetails?.customerScrap[0]?.scrapBankDetails?.bankBranch | titlecase}}<br>
                     {{cutomerDetails?.customerScrap[0]?.scrapBankDetails?.acNumber | titlecase}}
                 </div>
                 </div>
