--- a/gold-admin-frontend/src/app/views/theme/base/base.component.html
+++ b/gold-admin-frontend/src/app/views/theme/base/base.component.html
@@ -20,13 +20,16 @@
 				<!-- end:: Header -->
 
 				<!-- begin:: Content -->
-				<div class="kt-content kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor margin-top " id="kt_content" [ngClass]="{'kt-content--fit-top': fitTop}" >
+				<div class="kt-content kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor " id="kt_content"
+					[ngClass]="{'kt-content--fit-top': fitTop} "
+					[ngStyle]="{'margin-top':isHeaderVisible?'15px':'-20px'}">
 					<!-- begin:: Content Head -->
 					<!-- <kt-subheader *ngIf="subheaderDisplay"></kt-subheader> -->
 					<!-- end:: Content Head -->
 
 					<!-- begin:: Content Body -->
-					<div ktContentAnimate class="kt-container kt-grid__item kt-grid__item--fluid" [ngClass]="{'kt-container--fluid': fluid}">
+					<div ktContentAnimate class="kt-container kt-grid__item kt-grid__item--fluid"
+						[ngClass]="{'kt-container--fluid': fluid}">
 						<router-outlet></router-outlet>
 					</div>
 					<!-- end:: Content Body -->
