--- a/gold-admin-frontend/src/app/views/partials/components/user-classification/user-classification.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/user-classification/user-classification.component.html
@@ -61,9 +61,9 @@
                             </tr>
                         </tbody>
                     </table>
-                    <div *ngIf="showTextBoxBM && userType == 6">
+                    <div *ngIf="showTextBoxBM && customerDetails.ratingStage == 1">
                         <div class="row kt-padding-l-10">
-                            <div class="col-4 form-label">
+                            <div class="col-4 font-weight-500">
                                 <label for="" class="kt-padding-l-10 m-0">Reason by OPS Team</label>
                             </div>
                             <div class="col-8 ">
@@ -74,8 +74,8 @@
                 </div>
 
                 <!-- <ng-container *ngIf="editRating"> -->
-                <div *ngIf="(showTextBoxCce && permission.cceKycRating)" class="col kt-margin-t-20 kt-margin-b-20"
-                    style="width: 600px; margin: auto">
+                <div *ngIf="showTextBoxCce && permission.cceKycRating && customerDetails.ratingStage == 1"
+                    class="col kt-margin-t-20 kt-margin-b-20" style="width: 600px; margin: auto">
                     <div class="row">
                         <div class="col-4" style="font-weight: 500 !important;">
                             <label for="" class="kt-padding-l-10">Choose a reason</label>
@@ -83,7 +83,7 @@
                         <div class="col-8">
                             <select class="form-control" formControlName="reasonForOther"
                                 placeholder="reason for Incomplete" (change)="patchReason()">
-                                <option value='' selected disabled>Choose a reason </option>
+                                <option value=null selected disabled>Choose a reason </option>
                                 <option [value]="reason.description" *ngFor="let reason of reasons">
                                     {{reason.description}}
                                 </option>
@@ -106,8 +106,8 @@
                     </div>
                 </div>
                 <!-- </ng-container> -->
-                <div *ngIf="showTextBoxBM && permission.opsKycRating" class="col kt-margin-t-20 kt-margin-b-20"
-                    style="width: 600px; margin: auto">
+                <div *ngIf="showTextBoxBM && permission.opsKycRating && customerDetails.ratingStage == 2"
+                    class="col kt-margin-t-20 kt-margin-b-20" style="width: 600px; margin: auto">
                     <mat-form-field class="w-100">
                         <mat-label class="mandatory">Reason for selected status</mat-label>
                         <textarea matInput formControlName="reasonFromOperationalTeam"
