--- a/gold-admin-frontend/src/app/views/pages/admin/applied-kyc/applied-kyc.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/applied-kyc/applied-kyc.component.scss
@@ -34,4 +34,11 @@
 	// .mat-column-customerId {
 	// 	flex: 0 0 10% !important;
 	// }
+	.custom-icon {
+		position: relative;
+		top: 6px;
+		color: gray;
+	 }
+	 
+	 
 }
