--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -756,4 +756,8 @@ mat-header-row {
 	background-color: #454d67 !important;
 }
 
-
+.custom-tooltip-white{
+	background:#ffffff !important;
+	color: #000000 !important;
+	font-size:14px;
+ }
