--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
@@ -53,7 +53,7 @@
                         <label class="mandatory">Tenure</label>
                     </div>
                     <div class="col-7">
-                        <select formControlName="tenure" class="form-control" (change)="setEndDate()"
+                        <select formControlName="tenure" class="form-control" (change)="setEndDate();checkForPaymentFrequency()"
                             [class.isError]="controls.tenure.touched && controls.tenure.invalid">
                             <option value="null" [selected]="true" [disabled]="true">Select Tenure</option>
                             <option [value]="ten" *ngFor="let ten of tenure;index as i">
@@ -157,7 +157,7 @@
                         <select class="form-control" formControlName="paymentFrequency" (change)="getIntrest(true)"
                             [class.isError]="controls.paymentFrequency.touched && controls.paymentFrequency.invalid">
                             <option value=null [selected]="true" [disabled]="true">Select Payment Frequency</option>
-                            <option [value]="pay.days" *ngFor="let pay of paymentFrequency">{{pay.days}}</option>
+                            <option [value]="pay.days" *ngFor="let pay of tempPaymentFrequency">{{pay.days}}</option>
                         </select>
                         <mat-error
                             *ngIf="controls.paymentFrequency.errors?.required && controls.paymentFrequency.touched">
